fix: horizontal field alignment

--- a/src/sass/components/_field.scss
+++ b/src/sass/components/_field.scss
@@ -48,4 +48,19 @@ $message-height: calc(var(--neon-font-size-s) * var(--neon-line-height-ratio));
       }
     }
   }
+
+  .neon--horizontal .neon-field + .neon-field {
+    margin-top: 0;
+    margin-left: calc(4 * var(--neon-base-space));
+
+    @include responsive.responsive(tablet) {
+      margin-top: 0;
+      margin-left: calc(3 * var(--neon-base-space));
+    }
+
+    @include responsive.responsive(mobile-large) {
+      margin-top: 0;
+      margin-left: calc(2 * var(--neon-base-space));
+    }
+  }
 }
